--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ countdown:
   minute: 0
 
 # Site owner
-owner: HỌC CHỦ ĐỘNG
-  name: hocchudong
+owner: 
+  name:
   email:
   twitter:
   google-plus:
